# pipeline-live

./: Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci-ubuntu.yml
examples/: df_factor.py  pricing_data.py  pricing_quantile.py  sector_data.py  testing.py
pipeline_live/: engine.py
pipeline_research/: __init__.py  engine.py
pipeline_research/assets/: assets.py  static.py
pipeline_research/data/: base_factor.py  base_loader.py
pipeline_research/data/alpaca/: pricing_loader.py
pipeline_research/data/factors/: numerical_classifiers.py
pipeline_research/data/iex/: fundamentals_loader.py  pricing_loader.py
pipeline_research/data/nasdaq/: factors.py  fundamentals.py
pipeline_research/data/sources/: nasdaq.py
pipeline_research/data/yahoo/: pricing.py
tests/: conftest.py  test_alpaca.py  test_engine.py  test_factors.py  test_iex.py  test_sources.py
